session2, first commit 😁

--- a/code/session 1/js7-countTo5.html
+++ b/code/session 1/js7-countTo5.html
@@ -18,6 +18,9 @@
 
         let counter = 0;
 
+        // COUNT FROM 0 TO 5,
+        // AFTER 5 JUMP BACK TO 0
+
         counterButton.addEventListener("click", function () {
             counter++;
             if (counter > 5) {
@@ -25,9 +28,6 @@
             }
             counterText.innerHTML = counter;
         });
-
-        // COUNT FROM 0 TO 5,
-        // AFTER 5 GO BACK TO 0
     </script>
 </body>
 
