--- a/code/session 2/js4-simpleGallery/index.html
+++ b/code/session 2/js4-simpleGallery/index.html
@@ -7,16 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #colorBox {
+        #imageBox {
             width: 200px;
             height: 200px;
-            background-color: red;
+            background-color: antiquewhite;
+
+        }
+
+        #imageBox img {
+            height: 200px;
+            width: 200px;
+            object-fit: contain;
         }
     </style>
 </head>
 
 <body>
-    <div id="colorBox">0</div>
+    <div id="imageBox">
+        <img id="imageView" src="images/1.jpg">
+    </div>
     <button id="prevButton">Prev Color</button>
     <button id="nextButton">Next Color</button>
 
@@ -24,29 +33,37 @@
         // WHEN THE USER CLICKS THE BUTTON THE COLOR OF THE BOX SHOULD
         // CYCLE FROM red TO green TO blue BACK TO red
 
-        const colorBox = document.getElementById("colorBox");
+        const imageView = document.getElementById("imageView");
         const nextButton = document.getElementById("nextButton");
         const prevButton = document.getElementById("prevButton");
 
         let counter = 0;
-        const colors = ["red", "green", "blue", "pink", "yellow", "gray", "tomato"];
+        const images = [
+            "images/1.jpg",
+            "images/2.jpg",
+            "images/3.jpg",
+            "images/4.jpg",
+            "images/5.jpg",
+            "images/6.jpg",
+            "images/7.jpg",
+            "images/8.jpg",
+            "https://upload.wikimedia.org/wikipedia/en/0/02/Homer_Simpson_2006.png"
+        ];
 
         nextButton.addEventListener("click", function () {
             counter++;
-            if (counter >= colors.length) {
+            if (counter >= images.length) {
                 counter = 0;
             }
-            colorBox.innerHTML = counter;
-            colorBox.style.backgroundColor = colors[counter];
+            imageView.src = images[counter];
         });
 
         prevButton.addEventListener("click", function () {
             counter--;
             if (counter < 0) {
-                counter = colors.length - 1;
+                counter = images.length - 1;
             }
-            colorBox.innerHTML = counter;
-            colorBox.style.backgroundColor = colors[counter];
+            imageView.src = images[counter];
         });
     </script>
 </body>
