--- a/code/session 3/js4-creatingElements.html
+++ b/code/session 3/js4-creatingElements.html
@@ -20,29 +20,44 @@
 <body>
     <button id="buttonAdd">More Buttons!</button>
     <div id="buttonHolder">
-
+        <!-- <button>Hello</button>
+        <ul>
+            <li>Apples</li>
+            <li>Oranges</li>
+        </ul>
+        <table>
+            <tr>
+                <td>1 cell table</td>
+            </tr>
+        </table>
+        <p>why not a paragraph</p> -->
     </div>
 
     <script>
         const buttonAdd = document.querySelector("#buttonAdd");
         const buttonHolder = document.querySelector("#buttonHolder");
 
+        let counter = 0;
         buttonAdd.addEventListener("click", function () {
 
-            buttonHolder.innerHTML += `<button>NEW BUTTON</button>`;
+            counter++;
+            buttonHolder.innerHTML += `<button>BUTTON ${counter}</button>`;
 
         });
 
         // EVENT DELEGATION
-        document.body.addEventListener("click", function (event) {
+        buttonHolder.addEventListener("click", function (event) {
 
             if (event.target.tagName == "BUTTON") {
-                alert("button clicked!");
+                // alert("button clicked!");
+                event.target.remove();
             } else {
                 alert("Something else clicked!");
             }
-
         });
+
+        // EXERCISE
+        // When the user clicks a button, that button deltes itself...
     </script>
 </body>
 
