--- a/code/session-3/js5-todoList.html
+++ b/code/session-3/js5-todoList.html
@@ -6,6 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        #theList li {
+            width: 250px;
+            height: 25px;
+        }
+
+        #theList button {
+            float: right;
+        }
+    </style>
 </head>
 
 <body>
@@ -37,6 +48,12 @@
 
             theList.innerHTML += `<li>${todoText} <button>X</button></li>`;
 
+        });
+
+        theList.addEventListener("click", function(event) {
+            if (event.target.tagName == "BUTTON") {
+                event.target.parentNode.remove();
+            }
         });
     </script>
 </body>
