calc 3 and homework

--- a/code/session-4/js2-simpleCalc/index.html
+++ b/code/session-4/js2-simpleCalc/index.html
@@ -21,8 +21,32 @@
         <div><input id="input2" placeholder="Second operand"></div>
         <div><button id="calculateButton">=</button></div>
         <div><input id="inputResult" value="?" readonly></div>
+        
+    </div>
+
+    Logs:
+    <div id="logContainer">
+        <div>2 + 2 = 4</div>
+        <div>3 * 5 = 15</div>
     </div>
     
     <script src="calc.js"></script>
+    <!-- HOMEWORK 1
+        EVERY TIME AN OPERATION IS DONE LOG IT IN THE FOLLOWING FORMAT:
+        2 + 2 = 4
+        3 * 5 = 15
+    -->
+
+    <!-- HOMEWORK 2
+        ADD A BUTTON TO CLEAN THE LOG
+    -->
+
+    <!-- HOMEWORK 3
+        ADD THE DATE AND TIME TO EACH LINE
+        FOR EXAMPLE:
+        16/06/2021 20:59 -> 2 + 2 = 4
+
+        Hint: Date object in JS
+    -->
 </body>
 </html>
