--- a/code/session-5/js6-filter.html
+++ b/code/session-5/js6-filter.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    <ul id="peopleList">
+
+    </ul>
     <script>
+        
+
         const numbers = [23, 12, 12, 4 ,1, 3, 2, 4, 5, 3, 2, 1, 3];
 
         // const filteresNumbers = numbers.filter(function(value) {
@@ -27,30 +32,48 @@
         document.write(filteresNumbers);
 
 
-
+        const peopleList = document.querySelector("#peopleList");
         const people = [
             {
-                name: "Joe",
-                age: 40
+                "name": "Joe",
+                "age": 40
             },
             {
-                name: "Martha",
-                age: 34
+                "name": "Martha",
+                "age": 34
             },
             {
-                name: "Zack",
-                age: 2
+                "name": "Zack",
+                "age": 2
             },
             {
-                name: "Mario",
-                age: 35
+                "name": "Mario",
+                "age": 35
             },
         ]
 
         // EXERCISE
         // using filter function remove the people who are younger than 18
         // or have more than 5 letters in their name
+        
+        const filteredPeople = people.filter(function(element) {
+            // if (element.age >= 18 && element.name.length <= 5) {
+            //     return true;
+            // } else {
+            //     return false;
+            // }
 
+            // if (element.age < 18 || element.name.length > 5) {
+            //     return false;
+            // } else {
+            //     return true;
+            // }
+            return element.age >= 18 && element.name.length <= 5
+        });
+
+        filteredPeople.forEach(function(element) {
+            peopleList.innerHTML += `<li>${element.name}, ${element.age}</li>`;
+        })
 
     </script>
 </body>
